# web

./: .env  Cargo.toml  README.md  build.rs  conf.toml
.vim/: coc-settings.json
migrations/: 20220118105309_create_users.sql  20220125141748_create_sessions.sql  20220125143727_add_sessions_invalid_column.sql  20220228063911_create_authentications.sql  20220228064756_remove_email_from_users.sql  20220228065050_change_authentication_to_authentications.sql  20220228065240_add_email_phone_to_users.sql  20220228065705_add_salt_to_users.sql  20220228084618_move_users_salt_to_authentications.sql  20220228091358_create_index_on_authentications.sql  20220228103001_add_user_id_to_sessions.sql
src/: conf.rs  error.rs  info.rs  main.rs  prelude.rs  response.rs
src/db/: authentication.rs  jwt.rs  mod.rs  user.rs
src/domain/: mod.rs
src/domain/db/: jwt.rs  mod.rs  oauth.rs  user.rs
src/domain/entity/: jwt.rs  mod.rs  oauth.rs  user.rs
src/domain/entity/jwt/: db.rs  entity.rs  repo.rs
src/domain/entity/oauth/: db.rs  repo.rs
src/domain/entity/session/: db.rs  entity.rs  mod.rs  repo.rs
src/domain/entity/user/: db.rs  entity.rs  repo.rs
src/domain/repo/: jwt.rs  mod.rs  oauth.rs  user.rs
src/domain/service/: mod.rs  oauth.rs  user.rs
src/extractor/: db.rs  login_user.rs  mod.rs
src/handler/: common.rs  mod.rs  oauth.rs  user.rs
src/middleware/: cors.rs  headers.rs  logger.rs  mod.rs
src/service/: oauth.rs
src/utils/: mod.rs  random_str.rs  sha1.rs
