[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [
  "postgres",
  "uuid",
  "chrono",
  "runtime-tokio-native-tls",
] }
anyhow = "1"
thiserror = "1.0.30"
chrono = { version = "0.4.19", features = ["serde"] }
config = { version = "0.11.0", features = ["toml"] }
once_cell = "1.10.0"
jsonwebtoken = "7.2.0"
async-trait = "0.1.52"
futures = "0.3.19"
rand = "0.8.5"
rust-crypto = "0.2.36"
utoipa = { version = "1.0.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "1.0.0", features = ["actix-web"] }
actix-cors = "0.6.1"

[build-dependencies]
built = { version = "0.5.1", features = ["git2"] }
